--- a/src/app/planning/planning.component.html
+++ b/src/app/planning/planning.component.html
@@ -2,9 +2,9 @@
 <!-- Toolbar -->
 <mat-toolbar class="toolbar center-content">
     <span>Planning</span>
-    <div>
+    <!-- <div>
         <button *ngIf="(authService.authState$ | async)?.isAuthenticated" (click)="oktaAuth.signOut()">Logout</button>
-      </div>
+      </div> -->
 </mat-toolbar>
 <!-- Two Buttons -->
 
